# texo-rag

./: .env.template  .gitignore  README.md  dev.ps1  dev.sh  package-lock.json  package.json  pyproject.toml
app/: main.py
app/api/: pipeline.py  routes.py
